--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>halo</title>
-    <link rel="stylesheet" href="./static/css/index.scss">
+    <link rel="stylesheet" href="./static/css/index.scss.css">
 </head>
 <body>
     <p>halo font-ender</p>
